# direct_method_simple

./: Cargo.toml  readme.md
doc/: outline.md
scripts/: alignment.py
src/: camera.rs  dataset.rs  lib.rs  main.rs  track.rs  type_aliases.rs  visualize.rs
